# template-fastapi

./: .docker.env  .docker.test.env  .dockerignore  .env.test  .example.env  .gitignore  .pre-commit-config.yaml  .release-it.json  .test.env  ADDING_FEATURES.md  ARCHITECTURE.md  AUTH_IMPLEMENTATION.md  Dockerfile  LICENSE  Makefile  OAUTH2_SETUP.md  README.md  STRUCTURE.md  alembic.ini  docker-compose.yaml  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/agents/: my-agent.agent.md
.github/workflows/: tests.yaml
alembic/: env.py
alembic/versions/: 20251113_create_users_table.py  31bb36d5d009_.py  9bd0c74dbfcb_.py
app/: custom_logging.py  main.py
app/api/v1/: __init__.py  router.py
app/application/auth/: __init__.py  authentication_service.py  oauth2_provider.py
app/application/dtos/: user.py
app/application/ports/: repositories.py
app/application/use_cases/user/: create_user.py  get_user.py  list_users.py
app/auth/: EXAMPLES.md  README.md  __init__.py  dependencies.py  endpoints.py  exceptions.py  models.py  router.py  routes.py  schemas.py  services.py
app/auth/providers/: __init__.py  interface.py  jwt_provider.py
app/auth/services/: __init__.py  check_permissions.py  verify_token.py
app/core/: config.py  constants.py  deps.py  endpoints.py  exception_handlers.py  schemas.py  security.py  utils.py
app/db/: __init__.py  base.py  base_class.py  session.py
app/domain/auth/: __init__.py  token.py  user.py
app/domain/entities/: user.py
app/domain/exceptions/: __init__.py
app/domain/value_objects/: username.py
app/health/: __init__.py  routes.py
app/health/services/: __init__.py  healthcheck.py
app/infrastructure/api/: dependencies.py
app/infrastructure/api/routes/: protected.py  users.py
app/infrastructure/api/schemas/: user.py
app/infrastructure/auth/: __init__.py  jwt_provider.py
app/infrastructure/config/: settings.py
app/infrastructure/database/: models.py  session.py
app/infrastructure/database/repositories/: user_repository.py
app/repository/: __init__.py  base.py  user.py
app/schemas/: base.py
app/shared/: logging.py  middleware.py
app/shared/functional/: compose.py  either.py  option.py
core/: __init__.py  config.py  constants.py  dependencies.py  logging.py  middleware.py
fragments/: 1767862951.feature  README.md
scripts/: check-fragments.sh  fragment.sh  lint.sh  migrate.sh  run.sh
shared/: __init__.py  exceptions.py  models.py  schemas.py  types.py
shared/utils/: __init__.py  functional.py
tests/: README.md  conftest.py  test_database_connection.py
tests/application/: test_use_cases.py
tests/core/: test_security.py  test_utils.py
tests/domain/: test_entities.py  test_value_objects.py
tests/endpoints/: test_auth.py  test_healthcheck.py
tests/endpoints/cassettes/: test_authenticated_healthcheck.yaml
tests/factories/: session.py  user.py  user_factory.py
tests/repository/: test_user_repository.py
tests/services/: test_check_permissions.py  test_verify_token.py
