[tool.poetry]
name = "template-fastapi"
version = "0.1.0"
description = ""
authors = ["Marcelo Lino <mdslino@gmail.com>"]
readme = "README.md"
packages = [{include = "template_fastapi"}]

[tool.poetry.dependencies]
alembic = "^1.9.1"
fastapi = "^0.111.0"
gunicorn = "^22.0.0"
httpx = "^0.27.0"
psycopg2-binary = "^2.9.5"
python = "^3.11"
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.0"
sqlalchemy-utils = "^0.41.1"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic-settings = "^2.0.1"
structlog = "^24.2.0"
asgi-correlation-id = "^4.3.1"


[tool.poetry.group.test.dependencies]
factory-boy = "^3.2.1"
faker = "^25.3.0"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
pytest-dotenv = "^0.5.2"
pytest-sugar = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.8.0"
isort = "^5.11.4"
mypy = "^1.0.1"
ruff = "^0.4.6"


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.ruff]
line-length = 79
target-version = "py311"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

preview = true

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "single"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
env_files = [
    ".test.env"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
